integration_tests/codegen_fail/fail/enum/derive_no_variants.rs
#[derive(juniper::GraphQLEnum)]
enum Test {}

fn main() {}
